# bingux

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  TODO.md  build-iso.sh  build-xfce-iso.sh  flake.nix  result  run-iso.sh  run-vm.sh
.claude/: settings.local.json
bootstrap/installer/: CALAMARES.md  bingux-install.sh
bootstrap/stage0/: build.sh  seed-packages.sh
bootstrap/stage1/: rebuild.sh
bootstrap/stage2/: build-all.sh  build-xfce-stack.sh  export-all.sh
bootstrap/stage2/iso/: bingux-init.sh  boot-squashfs.sh  build-iso.sh  build-production-iso.sh  build-selfhosted-iso.sh  build-systemd-iso.sh  build-test-iso.sh  initrd-init.sh  manifest.toml  mkiso.sh
bootstrap/tools/: bingux-getty.c  bingux-getty@.service
cli/bpkg/: Cargo.toml
cli/bpkg/completions/: bpkg.bash  bpkg.fish  bpkg.zsh
cli/bpkg/src/: args.rs  main.rs  output.rs
cli/bpkg/src/commands/: add.rs  home.rs  info.rs  keep.rs  list.rs  mod.rs  permissions.rs  pin.rs  profile.rs  remove.rs  repo.rs  search.rs  upgrade.rs
cli/bpkg/tests/: cli_tests.rs
cli/bsys/: Cargo.toml
cli/bsys/completions/: bsys.bash  bsys.fish  bsys.zsh
cli/bsys/src/: args.rs  main.rs  output.rs
cli/bsys/src/commands/: add.rs  build.rs  compose.rs  export.rs  gc.rs  home.rs  keep.rs  list.rs  mod.rs  permissions.rs  remove.rs  repo.rs
cli/bsys/tests/: cli_tests.rs  integration_tests.rs
cli/bxc/: Cargo.toml
cli/bxc/completions/: bxc.bash  bxc.fish  bxc.zsh
cli/bxc/src/: args.rs  main.rs  output.rs
cli/bxc/src/commands/: inspect.rs  ls.rs  mod.rs  mounts.rs  perms.rs  ps.rs  run.rs  shell.rs
cli/bxc/tests/: cli_tests.rs  integration_tests.rs
common/bingux-common/: Cargo.toml
common/bingux-common/src/: error.rs  lib.rs  package_id.rs  paths.rs  scope.rs
docs/: architecture.md  packaging-guide.md  permissions-model.md
docs/internals/: compat-notes.md  generations.md  patchelf.md  seccomp-unotify.md
files/branding/: bingus.ascii
files/etc/profile.d/: bingux.sh
files/fastfetch/: config.jsonc
files/git/: gitignore_global
files/installer/: PARTITION-GUIDE.txt
gate/bingux-dbus-proxy/: Cargo.toml
gate/bingux-dbus-proxy/src/: filter.rs  lib.rs  policy.rs  proxy.rs
gate/bingux-gated/: Cargo.toml
gate/bingux-gated/src/: daemon.rs  decoder.rs  error.rs  lib.rs  listener.rs  main.rs  permissions.rs  prompt.rs  registry.rs
gate/bingux-prompt/: Cargo.toml
gate/bingux-prompt/src/: backend.rs  history.rs  lib.rs  protocol.rs  server.rs  tests.rs  types.rs
gate/bingux-settings/: Cargo.toml
gate/bingux-settings/src/: actions.rs  model.rs
home/bpkg-home/: Cargo.toml
home/bpkg-home/src/: apply.rs  config.rs  delta.rs  init.rs  lib.rs  status.rs
installer-app/data/: dev.drewett.BinguxInstaller.desktop
installer-app/src/: main.py  state.py
installer-app/src/backend/: github.py  nixos.py  partitioner.py
installer-app/src/pages/: complete.py  encryption.py  install.py  install_type.py  repository.py  system_config.py  user_setup.py
installer/src/: application.py  main.py  state.py  tui.py  window.py
kernel/: bingux-kernel-config
kernel/bingux-compat/: .gitignore  Makefile  bingux_compat.c
kernel/bingux-hide/: ..module-common.o.cmd  .Module.symvers.cmd  .bingux_hide.ko.cmd  .bingux_hide.mod.cmd  .bingux_hide.mod.o.cmd  .bingux_hide.o.cmd  .gitignore  .modules.order.cmd  Makefile  bingux_hide.c  bingux_hide.ko  bingux_hide.mod  bingux_hide.mod.c  modules.order
lib/: mkBinguxHost.nix
modules/installer/: live-iso.nix  live-shell.nix
modules/profiles/: generic.nix  laptop.nix  workstation.nix
modules/shared/: zsh-profile.nix
modules/system/: audio.nix  boot.nix  branding.nix  common.nix  fonts.nix  gnome.nix  gpg.nix  locale.nix  monitors.nix  nix.nix
overlays/: default.nix
pkg/bpkg-build/: Cargo.toml
pkg/bpkg-build/src/: config.rs  error.rs  executor.rs  fetch.rs  lib.rs  pipeline.rs
pkg/bpkg-patchelf/: Cargo.toml
pkg/bpkg-patchelf/src/: analyzer.rs  lib.rs  log.rs  planner.rs  scanner.rs  shebang.rs
pkg/bpkg-recipe/: Cargo.toml
pkg/bpkg-recipe/src/: error.rs  lib.rs  parser.rs  recipe.rs  tests.rs  validate.rs
pkg/bpkg-repo/: Cargo.toml
pkg/bpkg-repo/src/: archive.rs  bgx_info.rs  config.rs  config_file.rs  error.rs  index.rs  lib.rs  resolve.rs
pkg/bpkg-resolve/: Cargo.toml
pkg/bpkg-resolve/src/: graph.rs  lib.rs  provider.rs  runpath.rs
pkg/bpkg-store/: Cargo.toml
pkg/bpkg-store/src/: integrity.rs  lib.rs  manifest.rs  store.rs
pkgs/aide/: default.nix
pkgs/bingux-cli/: _bgx  bgx.py  default.nix
pkgs/bingux-installer/: default.nix
pkgs/bingux-plymouth/: default.nix
pkgs/fastfetch-wrapper/: default.nix
pkgs/minegrub-theme/: default.nix
pkgs/os-helper/: default.nix
sandbox/bxc-runtime/: Cargo.toml
sandbox/bxc-runtime/src/: config.rs  inject.rs  lib.rs  mounts.rs  sandbox.rs
sandbox/bxc-sandbox/: Cargo.toml
sandbox/bxc-shim/: Cargo.toml
sandbox/bxc-shim/src/: dispatch.rs  error.rs  lib.rs  main.rs  resolver.rs  version.rs
sandbox/bxc-shim/tests/: dispatch_tests.rs  integration_tests.rs  resolver_tests.rs  version_tests.rs
scripts/: build-and-test.sh  build-kernel-in-vm.sh  demo.sh
system/bingux-init/: Cargo.toml
system/bingux-init/src/: error.rs  executor.rs  lib.rs  plan.rs
system/bingux-init/tests/: executor_tests.rs  integration_tests.rs  plan_tests.rs
system/bsys-compose/: Cargo.toml
system/bsys-compose/src/: builder.rs  dispatch.rs  generation.rs  lib.rs
system/bsys-config/: Cargo.toml
system/bsys-config/src/: config.rs  etc_gen.rs  lib.rs  profile_env.rs  service_backend.rs
testing/: run-all-tests.sh
testing/bingux-qemu-mcp/: Cargo.toml
testing/smoke-tests/: boot.sh  package-install.sh  permission-prompt.sh  rollback.sh  run-boot-test.sh  run-bootstrap-test.sh  run-full-workflow.sh  run-interactive-test.sh  run-kernel-build-test.sh  run-lifecycle-test.sh  run-permissions-test.sh  run-selfhost-test.sh  run-system-test.sh
testing/vm/: launch.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: build_all_packages.rs  e2e_pipeline.rs  real_build.rs  repo_test.rs
(+269 files in other folders)
