[package]
name = "bpkg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "User package manager CLI"

[[bin]]
name = "bpkg"
path = "src/main.rs"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bpkg-store = { path = "../../pkg/bpkg-store" }
clap = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
