[package]
name = "bsys-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System manager CLI"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
clap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
