[package]
name = "bsys-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System manager CLI"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bpkg-store = { path = "../../pkg/bpkg-store" }
bpkg-recipe = { path = "../../pkg/bpkg-recipe" }
bsys-config = { path = "../../system/bsys-config" }
bsys-compose = { path = "../../system/bsys-compose" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
