[package]
name = "bsys-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System manager CLI"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bpkg-store = { path = "../../pkg/bpkg-store" }
bpkg-recipe = { path = "../../pkg/bpkg-recipe" }
bpkg-build = { path = "../../pkg/bpkg-build" }
tokio = { workspace = true }
bsys-config = { path = "../../system/bsys-config" }
bsys-compose = { path = "../../system/bsys-compose" }
bxc-sandbox = { path = "../../sandbox/bxc-sandbox" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
