[package]
name = "bxc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandbox container CLI"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bingux-gated = { path = "../../gate/bingux-gated" }
bxc-sandbox = { path = "../../sandbox/bxc-sandbox" }
bpkg-store = { path = "../../pkg/bpkg-store" }
bxc-shim = { path = "../../sandbox/bxc-shim" }
nix = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
