[package]
name = "bingux-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, path constants, and error types for Bingux"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
