[package]
name = "bingux-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permission management GUI"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
