[package]
name = "bpkg-home"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Declarative home environment manager"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
