[package]
name = "bxc-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Namespace sandbox runtime"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bxc-sandbox = { path = "../bxc-sandbox" }
serde = { workspace = true }
nix = { workspace = true }
anyhow = { workspace = true }
