[package]
name = "bxc-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-call launcher shim"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bxc-sandbox = { path = "../bxc-sandbox" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
