[package]
name = "bsys-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System profile generation"

[dependencies]
bingux-common = { path = "../../common/bingux-common" }
bxc-sandbox = { path = "../../sandbox/bxc-sandbox" }
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
